--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "install": "^0.13.0",
     "jquery": "^3.5.1",
     "mongoose": "^5.11.11",
+    "neo4j-driver": "^4.2.2",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
     "npm": "^6.14.11",
