--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack --mode=development",
+    "start:test": "NEWRELIC=true nodemon server/start.js",
     "build": "webpack --mode=production",
     "dev": "webpack serve",
     "seed": "node database/seed.js",
@@ -38,6 +39,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "css-loader": "^5.0.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "faker": "^5.1.0",
     "fontsource-roboto": "^4.0.0",
@@ -45,6 +47,8 @@
     "install": "^0.13.0",
     "jquery": "^3.5.1",
     "mongoose": "^5.11.11",
+    "neo4j-driver": "^4.2.2",
+    "newrelic": "^7.1.1",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
     "npm": "^6.14.11",
@@ -52,6 +56,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-responsive-modal": "^6.0.1",
+    "rxjs": "^6.6.3",
     "style-loader": "^2.0.0",
     "unsplash": "^4.2.0",
     "webpack": "^5.14.0",
